<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>io.ecocode</groupId>
	<artifactId>ecocode-android-parent</artifactId>
	<version>1.0.2-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>ecoCode Android Sonar Plugins Project</name>
	<description>Provides rules to reduce the environmental footprint of your Android applications</description>
	<url>https://github.com/green-code-initiative/ecocode-android</url>
	<organization>
		<name>Green Code Initiative</name>
		<url>https://collectif.greenit.fr</url>
	</organization>
	<licenses>
		<license>
			<name>GPL v3</name>
			<url>https://www.gnu.org/licenses/gpl-3.0.en.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/green-code-initiative/ecocode-android/issues</url>
	</issueManagement>
	<scm>
		<connection>scm:git:https://github.com/green-code-initiative/ecocode-android</connection>
		<developerConnection>scm:git:https://github.com/green-code-initiative/ecocode-android</developerConnection>
		<url>https://github.com/green-code-initiative/ecocode-android</url>
		<tag>HEAD</tag>
	</scm>

	<properties>
		<java.version>11</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>

		<encoding>UTF-8</encoding>
		<project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
		<project.reporting.outputEncoding>${encoding}</project.reporting.outputEncoding>

		<sonarqube.version>9.4.0.54424</sonarqube.version>
		<sonarjava.version>7.15.0.30507</sonarjava.version>

		<sonar.organization>green-code-initiative</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>

		<!-- Don't forget to update this version -->
		<jacoco.version>0.8.8</jacoco.version>

		<sonar-plugin-api-impl.version>9.7.1.62043</sonar-plugin-api-impl.version>
		<sonar.analyzerCommons.version>2.1.0.1111</sonar.analyzerCommons.version>
		<sonar-packaging.version>1.21.0.505</sonar-packaging.version>
		<sonar.skipDependenciesPackaging>true</sonar.skipDependenciesPackaging>
		<maven-shade-plugin.version>3.4.1</maven-shade-plugin.version>
    
		<junit.version>4.13.2</junit.version>
		<junit.jupiter.version>5.9.1</junit.jupiter.version>
		<assertJ.version>3.23.1</assertJ.version>

		<sonar.exclusions>**/codenarc-converter/**,**/*.groovy,**/android-plugin/src/test/**,**/*.dummy,**/generated/**/*.*</sonar.exclusions>
		<sonar.coverage.exclusions>**/generated/**/*.*</sonar.coverage.exclusions>

	</properties>

	<dependencyManagement>
		<dependencies>
			<!-- MAIN sources dependencies -->
			<dependency>
				<groupId>org.sonarsource.sonarqube</groupId>
				<artifactId>sonar-plugin-api</artifactId>
				<version>${sonarqube.version}</version>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>org.sonarsource.analyzer-commons</groupId>
				<artifactId>sonar-analyzer-commons</artifactId>
				<version>${sonar.analyzerCommons.version}</version>
			</dependency>

			<dependency>
				<groupId>org.sonarsource.sonarqube</groupId>
				<artifactId>sonar-plugin-api-impl</artifactId>
				<version>${sonar-plugin-api-impl.version}</version>
			</dependency>

			<!-- JAVA -->
			<dependency>
				<groupId>org.sonarsource.java</groupId>
				<artifactId>sonar-java-plugin</artifactId>
				<type>sonar-plugin</type>
				<version>${sonarjava.version}</version>
				<scope>provided</scope>
			</dependency>

			<!-- TEST sources dependencies -->
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter</artifactId>
				<version>${junit.jupiter.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-migrationsupport</artifactId>
				<version>${junit.jupiter.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.assertj</groupId>
				<artifactId>assertj-core</artifactId>
				<version>${assertJ.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.10.1</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>3.3.0</version>
				</plugin>

				<plugin>
					<groupId>org.sonarsource.sonar-packaging-maven-plugin</groupId>
					<artifactId>sonar-packaging-maven-plugin</artifactId>
					<version>${sonar-packaging.version}</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-shade-plugin</artifactId>
					<version>${maven-shade-plugin.version}</version>
				</plugin>

				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>${jacoco.version}</version>
				</plugin>

				<!-- License management -->
				<plugin>
					<groupId>com.mycila</groupId>
					<artifactId>license-maven-plugin</artifactId>
					<version>4.1</version>
					<configuration>
						<properties>
							<project.name>ecoCode Android plugin</project.name>
							<project.description>Provides rules to reduce the environmental footprint of your Android applications</project.description>
							<email>contact@ecocode.io</email>
							<year>2020</year>
						</properties>
						<licenseSets>
							<licenseSet>
								<header>com/mycila/maven/plugin/license/templates/GPL-3.txt</header>
								<includes>
									<include>**/*.java</include>
								</includes>
								<!-- Exclude CodeNarc files that already have their own copyright -->
								<excludes>
									<exclude>**/java/org/sonar/plugins/groovy/**</exclude>
									<exclude>**/codenarc-converter/**</exclude>
								</excludes>
							</licenseSet>
						</licenseSets>
					</configuration>
					<executions>
						<execution>
							<id>validate</id>
							<goals>
								<goal>check</goal>
							</goals>
							<phase>validate</phase>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<modules>
		<module>codenarc-converter</module>
		<module>android-plugin</module>
	</modules>
	
</project>
